Bug 599367: Set content type on moz-filedata channels. r=sicking a=blocking-beta-8

--HG--
rename : content/base/test/file_bug543870_doc.html => content/base/test/file_mozfiledataurl_doc.html
rename : content/base/test/file_bug543870_img.jpg => content/base/test/file_mozfiledataurl_img.jpg
rename : content/base/test/file_bug543870_inner.html => content/base/test/file_mozfiledataurl_inner.html
rename : content/base/test/file_bug543870_text.txt => content/base/test/file_mozfiledataurl_text.txt
rename : content/base/test/test_bug543870.html => content/base/test/test_mozfiledataurl.html
extra : rebase_source : f297d67ba4c75ce711b643577c69386c93c03bf8